# handprint

./: .buildinfo  .gitignore  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.html  Makefile  Pipfile  README-PAPER.md  README.md  SUPPORT.md  advanced-usage.html  basic-usage.html  codemeta.json  colophon.html  command-summary.html  configuration.html  genindex.html  index.html  installation.html  known-issues.html  objects.inv  paper.bib  paper.md  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build-sphinx.yml  draft-pdf.yml
_sources/: advanced-usage.md.txt  basic-usage.md.txt  colophon.md.txt  configuration.md.txt  index.md.txt
_static/css/: custom.css
dev/icon/: README.md
dev/scripts/: create-pyz  create-pyz.py
dev/services/google/: Google-vision-notes.md  README.md
dev/services/sample-output/: README.md  dag-304-DAG_1_1_8_0029.handprint-amazon-rekognition.json  dag-304-DAG_1_1_8_0029.handprint-amazon-rekognition.txt  dag-304-DAG_1_1_8_0029.handprint-amazon-textract.json  dag-304-DAG_1_1_8_0029.handprint-amazon-textract.txt  dag-304-DAG_1_1_8_0029.handprint-google.json  dag-304-DAG_1_1_8_0029.handprint-google.txt  dag-304-DAG_1_1_8_0029.handprint-microsoft.json  dag-304-DAG_1_1_8_0029.handprint-microsoft.txt
docs/: Makefile  README.md  advanced-usage.md  basic-usage.md  colophon.md  command-summary.md  conf.py  configuration.md  index.md  installation.md  known-issues.md
docs/_static/css/: custom.css
handprint/: __init__.py  __main__.py  __version__.py  annotate.py  comparison.py  constants.py  cpus.py  data_utils.py  debug.py  exceptions.py  exit_codes.py  files.py  google_ocr.py  images.py  interruptions.py  main_body.py  manager.py  messages.py  messages_styles.py  network.py  processes.py  progress.py  styled.py  text_styles.py  ui.py
handprint/credentials/: __init__.py  amazon_auth.py  base.py  credentials_files.py  google_auth.py  microsoft_auth.py
handprint/htr/: __init__.py  base.py  google.py  microsoft.py
handprint/methods/: __init__.py  base.py  google.py  microsoft.py
handprint/services/: __init__.py  amazon.py  amazon_rekognition.py  amazon_textract.py  base.py  google.py  microsoft.py
pubs/joss/: .gitignore  Makefile  README.md  notes.txt  paper.bib  paper.md
tests/: test_comparison.py  test_exceptions.py  test_exit_codes.py  test_images.py
tests/data/: README.md
tests/data/caltech-archives/glaser/: README.md  dag-285-DAG_1_1_8_0003.jp2
tests/data/public-domain/: LOC-urls.txt  README.md
tests/images/caltech-archives/donald-a-glaser/: dag-20926-DAG_7_4_5_0020.jp2
tests/images/caltech-archives/glaser/: README.md
tests/images/caltech-archives/hale/: README.md
tests/images/caltech-archives/maccready/: pbm-2459-PBM_3_1_1_0013.jp2
tests/images/handwriting/caltech-archives/donald-a-glaser/: dag-304-DAG_1_1_8_0029.jp2
tests/images/handwriting/caltech-archives/george-ellery-hale/: hale-geneology-1934-p1.url  hale-notebook-1917-p2.url
tests/images/handwriting/public-domain/: README.md
tests/images/mixed/caltech-archives/donald-a-glaser/: README.md
tests/images/mixed/caltech-archives/paul-b-maccready/: pbm-67102-PBM_2_4_4_01_0008.jp2
tests/images/public-domain/: README.md
tests/images/typed/caltech-archives/paul-b-maccready/: pbm-24075-PBM_4_1_13_0007.jp2  pbm-24078-PBM_4_1_13_0013.jp2  pbm-24085-PBM_4_1_13_0011.jp2  pbm-24102-PBM_4_1_13_0037.jp2
tests/mixed/caltech-archives/donald-a-glaser/: dag-50293-DAGB_7_15_29_0127.jp2
tests/mixed/caltech-archives/george-ellery-hale/: README.md
tests/urls/: caltech-archives-urls.txt
