# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/handprint
# =============================================================================

[metadata]
name          = handprint
version       = 1.6.0
description   = Run handwritten text recognition services on images of documents
author        = Michael Hucka
author_email  = mhucka@caltech.edu
license       = BSD 3-clause
license_files = LICENSE
url           = https://github.com/caltechlibrary/handprint
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/handprint
  Bug Tracker = https://github.com/caltechlibrary/handprint/issues
keywords      = HTR, OCR, handwritten text recognition, machine learning
classifiers   =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  License :: OSI Approved :: BSD License
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Image Recognition
  Topic :: Text Processing :: Linguistic
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
  handprint = handprint.__main__:console_scripts_main

[check-manifest]
ignore =
    .graphics/sample-annotated-image.png
    .graphics/handprint-screencast.gif
